# ai_rpg

./: .dockerignore  .gitignore  README.md  database.py  docker-compose.yml  dockerfile  entrypoint.sh  main.py  models.py  pyproject.toml  snippets
alembic/: env.py
routers/: ai.py  ai_service.py  chat_setup.py  conversations.py  payments.py  user.py
services/: ai_service.py  auth_service.py  db_service.py
static/: api.js  auth.js  chat.css  chat.js  chatApi.js  chatUI.js  chatUtils.js  style.css  ui.js
static/js/: propelauth.min.js
templates/: base.html  index.html  payment_status.html
templates/chat_setup/: _step_context.html  _step_goal.html
