# pyproject.toml (Corrected for Poetry)

[tool.poetry]
name = "ai-jdr"
version = "0.1.0"
description = "A simple AI app to build your own homebrew tabletop games"
authors = ["Gabriel Hurtado"] # Simpler format often preferred by Poetry
readme = "README.md"
# python key under dependencies defines required version

[tool.poetry.dependencies]
python = ">=3.9" # Define required Python version here

# List dependencies without version constraints inline (Poetry handles this)
fastapi = ">=0.115.1,<0.116.0"  # Keep specific constraints if needed
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"} # Format for extras
jinja2 = ">=3.1.6,<4.0.0"
psycopg = ">=3.2.6,<4.0.0"
sqlmodel = ">=0.0.24,<0.0.25"
python-dotenv = ">=1.1.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
propelauth-fastapi = ">=4.2.6,<5.0.0"

# Add development dependencies under a separate group if needed
# [tool.poetry.group.dev.dependencies]
# pytest = "^7.0" # Example
stripe = "^12.0.1"
google-generativeai = "^0.8.5"
python-multipart = "^0.0.20"
markdown = "^3.8"
sse-starlette = "^2.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"] # Standard requirement for poetry-core
build-backend = "poetry.core.masonry.api"